--- a/NewsManagementMVC/Views/Account/Details.cshtml
+++ b/NewsManagementMVC/Views/Account/Details.cshtml
@@ -1,42 +1,79 @@
 ﻿@model AccountViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Account Details";
 }
 
-<h1>Details</h1>
+<style>
+    .details-card {
+        background: #fff;
+        border-radius: 24px;
+        box-shadow: 0 8px 32px 0 rgba(60,60,60,0.10), 0 1.5px 6px 0 rgba(60,60,60,0.08);
+        max-width: 600px;
+        margin: 48px auto 32px auto;
+        padding: 40px 36px 32px 36px;
+    }
 
-<div>
-    <h4>SystemAccount</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AccountName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AccountName)
+    .details-title {
+        color: #ff9800;
+        font-size: 1.5rem;
+        font-weight: 700;
+        text-align: center;
+        margin-bottom: 32px;
+    }
+
+    .details-dl {
+        display: grid;
+        grid-template-columns: 150px 1fr;
+        row-gap: 18px;
+        column-gap: 18px;
+        margin-bottom: 0;
+    }
+
+        .details-dl dt {
+            font-weight: 600;
+            color: #333;
+            text-align: left;
+        }
+
+        .details-dl dd {
+            margin-bottom: 0;
+            color: #222;
+            word-break: break-word;
+        }
+
+    .details-actions {
+        margin-top: 32px;
+        display: flex;
+        gap: 18px;
+    }
+
+    .details-link {
+        color: #ff9800;
+        font-weight: 600;
+        text-decoration: none;
+        transition: color 0.2s;
+    }
+
+        .details-link:hover {
+            color: #ff5722;
+            text-decoration: underline;
+        }
+</style>
+
+<div class="details-card">
+    <div class="details-title">
+        @Model.AccountName
+    </div>
+    <dl class="details-dl">
+        <dt>Email</dt>
+        <dd>
+            <a href="mailto:@Model.AccountEmail" style="color:#1976d2;">@Model.AccountEmail</a>
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AccountEmail)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AccountEmail)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AccountRole)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AccountRole)
-        </dd>
-        @* <dt class = "col-sm-2"> *@
-        @*     @Html.DisplayNameFor(model => model.AccountPassword) *@
-        @* </dt> *@
-        @* <dd class = "col-sm-10"> *@
-        @*     @Html.DisplayFor(model => model.AccountPassword) *@
-        @* </dd> *@
+        <dt>Role</dt>
+        <dd>@Model.AccountRole</dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.AccountId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div class="details-actions">
+        <a asp-action="Index" class="details-link">&larr; Back to List</a>
+    </div>
 </div>
