--- a/NewsManagementMVC/Views/Account/Index.cshtml
+++ b/NewsManagementMVC/Views/Account/Index.cshtml
@@ -14,8 +14,7 @@
         <a href="#" data-bs-toggle="modal" data-bs-target="#createModal" class="btn btn-success ms-2">+ Create New</a>
         @await Html.PartialAsync("_CreateModal", new CreateAccountViewModel())
     </div>
-
-    <form asp-action="Index" method="get" class="search-bar">
+    <form asp-action="Index" method="get" class="search-bar" style="width:100%;">
         <div>
             <label for="searchField">Field</label>
             <select id="searchField" name="searchField" class="form-select" title="Search Field">
@@ -24,21 +23,20 @@
                 <option value="AccountRole" selected="@(searchField == "AccountRole" ? "selected" : null)">Role</option>
             </select>
         </div>
-        <div>
+        <div style="flex:2;">
             <label for="searchString">Search</label>
             <div class="search-input-group">
                 <span class="search-icon">
                     <i class="bi bi-search"></i>
                 </span>
                 <input type="text" id="searchString" name="searchString" class="form-control" placeholder="Type to search..." value="@searchString" title="Search" />
-                <button type="submit" class="btn btn-primary">
-                    <i class="bi bi-search"></i> Search
-                </button>
             </div>
         </div>
-        <a href="/Account/Index" class="btn btn-link" style="align-self: end; margin-left: 12px;">Clear all</a>
+        <button type="submit" class="btn btn-primary" style="align-self: end; min-width:120px;">
+            <i class="bi bi-search"></i> Search
+        </button>
+        <a href="/NewsArticles/Index" class="btn btn-link" style="align-self: end; margin-left:8px;white-space:nowrap;">Clear all</a>
     </form>
-
     <div style="overflow-x:auto;">
         <table class="news-table">
             <thead>
