--- a/NewsManagementMVC/Views/Categories/Index.cshtml
+++ b/NewsManagementMVC/Views/Categories/Index.cshtml
@@ -23,17 +23,18 @@
 
 
 <link href="/css/category.css" rel="stylesheet"/>
-<h1>Category List</h1>
+
 <div class="category-card">
-    <p>
-        <a href="#" data-bs-toggle="modal" data-bs-target="#createModal">Create New</a>
+    <div class="category-header">
+        <h1 class="news-title">List categories</h1>
+        <a href="#" data-bs-toggle="modal" data-bs-target="#createModal" class="btn btn-success ms-2">+ Create New</a>
         @await Html.PartialAsync("_CreateModal", new Category(), new ViewDataDictionary(ViewData)
         {
-        { "ParentCategoryId", parentSelectList }
+            { "ParentCategoryId", parentSelectList }
         })
 
 
-    </p>
+    </div>
     <!-- Center: Search Bar -->
     @if (ViewData["ShowSearch"] as bool? == true)
     {
@@ -47,6 +48,7 @@
                 <th>@Html.DisplayNameFor(model => model.CategoryDesciption)</th>
                 <th>@Html.DisplayNameFor(model => model.IsActive)</th>
                 <th>Parent Category</th>
+                <th>Action</th>
                 <th></th>
             </tr>
         </thead>
@@ -56,7 +58,16 @@
             <tr>
                 <td>@Html.DisplayFor(modelItem => item.CategoryName)</td>
                 <td>@Html.DisplayFor(modelItem => item.CategoryDesciption)</td>
-                <td>@Html.DisplayFor(modelItem => item.IsActive)</td>
+                    <td>
+                        @if (item.IsActive == true)
+                        {
+                            <span class="details-badge">Active</span>
+                        }
+                        else
+                        {
+                            <span class="details-badge inactive">Inactive</span>
+                        }
+                    </td>
                 <td>@(item.ParentCategory?.CategoryName ?? "None")</td>
                 <td>
                     <a href="#" data-bs-toggle="modal" data-bs-target="#editModal-@item.CategoryId">Edit</a> |
