--- a/NewsManagementMVC/Views/NewsArticles/Create.cshtml
+++ b/NewsManagementMVC/Views/NewsArticles/Create.cshtml
@@ -69,7 +69,7 @@
     <div class="form-group">
         <label asp-for="NewsStatus" class="control-label"></label>
         <select asp-for="NewsStatus" class="form-select">
-            <option value="">-- Select Role --</option>
+            <option value="">-- Status --</option>
             <option value="false">Inactive</option>
             <option value="true">Active</option>
         </select>
