--- a/NewsManagementMVC/Views/NewsArticles/_EditNewsArticleModal.cshtml
+++ b/NewsManagementMVC/Views/NewsArticles/_EditNewsArticleModal.cshtml
@@ -26,10 +26,6 @@
                         <label asp-for="NewsSource" class="form-label"></label>
                         <input asp-for="NewsSource" class="form-control" />
                     </div>
-                    <div class="mb-3">
-                        <label asp-for="NewsStatus" class="form-label"></label>
-                        <input asp-for="NewsStatus" class="form-control" />
-                    </div>
                     <div class="form-group">
                         <label asp-for="CategoryId"></label>
                         <select asp-for="CategoryId" asp-items="@(ViewData["CategoryId"] as SelectList)" class="form-control">
@@ -59,7 +55,7 @@
                     <div class="form-group">
                         <label asp-for="NewsStatus" class="control-label"></label>
                         <select asp-for="NewsStatus" class="form-select">
-                            <option value="">-- Select Role --</option>
+                            <option value="">-- Status --</option>
                             <option value="false">Inactive</option>
                             <option value="true">Active</option>
                         </select>
